# OOP_lab1

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
Examples/: Examp1.py  Examp2.py  Examp3.py
src/oop_lab1/: main1.py  main2.py
src/oop_lab1/TaskPackage1/: Task1.py  __init__.py
src/oop_lab1/TaskPackage2/: Task2.py  __init__.py
tests/: test_task1.py  test_task2.py
