[project]
name = "oop-lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "qwezas",email = "krymovalihan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "oop_lab1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
